--- a/plasmoid/metadata.desktop
+++ b/plasmoid/metadata.desktop
@@ -2,17 +2,23 @@
 Encoding=UTF-8
 Name=Media Control
 Type=Service
+Comment=Nothing
+Icon=applications-multimedia
 
-X-KDE-Library=mediacontrol
-X-KDE-ParentApp=
 X-KDE-PluginInfo-Author=Parker Stromberg
 X-KDE-PluginInfo-Email=parker.stromberg@gmail.com
 X-KDE-PluginInfo-License=GPL
-X-KDE-PluginInfo-Name=parker.mediacontrol
+X-KDE-PluginInfo-Name=parker_mediacontrol
 X-KDE-PluginInfo-Version=1.0
 X-KDE-ServiceTypes=Plasma/Applet
 X-Plasma-API=declarativeappletscript
 X-Plasma-MainScript=ui/main.qml
-X-Plasma-NotificationArea=true
-X-KDE-PluginInfo-Category=ApplicationStatus
-X-Plasma-DBusActivationService=org.mpris.MediaPlayer2.*
+# X-Plasma-NotificationArea=true
+# X-Plasma-NotificationAreaCategory=SystemServices
+X-Plasma-Provides=org.kde.plasma.multimediacontrols
+X-KDE-PluginInfo-Category=Multimedia
+X-KDE-PluginInfo-Depends=
+X-KDE-PluginInfo-EnabledByDefault=true
+X-Plasma-StandAloneApp=true
+# X-Plasma-DBusActivationService=org.mpris.MediaPlayer2.*
+X-KDE-FormFactors=desktop
