Added control ui

--- a/plasmoid/metadata.desktop
+++ b/plasmoid/metadata.desktop
@@ -4,13 +4,13 @@ Name=Media Control
 Type=Service
 Comment=Nothing
 Icon=applications-multimedia
+X-KDE-ServiceTypes=Plasma/Applet,Plasma/Containment
 
 X-KDE-PluginInfo-Author=Parker Stromberg
 X-KDE-PluginInfo-Email=parker.stromberg@gmail.com
 X-KDE-PluginInfo-License=GPL
 X-KDE-PluginInfo-Name=parker_mediacontrol
 X-KDE-PluginInfo-Version=1.0
-X-KDE-ServiceTypes=Plasma/Applet
 X-Plasma-API=declarativeappletscript
 X-Plasma-MainScript=ui/main.qml
 # X-Plasma-NotificationArea=true
@@ -20,5 +20,6 @@ X-KDE-PluginInfo-Category=Multimedia
 X-KDE-PluginInfo-Depends=
 X-KDE-PluginInfo-EnabledByDefault=true
 X-Plasma-StandAloneApp=true
+X-Plasma-ContainmentType=Panel
 # X-Plasma-DBusActivationService=org.mpris.MediaPlayer2.*
 X-KDE-FormFactors=desktop
