--- a/src/package/metadata.desktop
+++ b/src/package/metadata.desktop
@@ -13,7 +13,7 @@ X-KDE-PluginInfo-Name=parker.mediacontrol
 X-KDE-PluginInfo-Version=1.0
 X-Plasma-API=declarativeappletscript
 X-Plasma-MainScript=ui/main.qml
-X-KDE-Library=plasma_applet_mediacontrol
+# X-KDE-Library=plasma_applet_mediacontrol
 # X-Plasma-NotificationArea=true
 # X-Plasma-NotificationAreaCategory=SystemServices
 # X-Plasma-Provides=org.kde.plasma.multimediacontrols
